--- a/views/reminder/promotion.ejs
+++ b/views/reminder/promotion.ejs
@@ -1,2 +1,4 @@
 Static promotion page
-<button type="submit" class="btn btn-default">Go to Log In</button>
+<form action="/login" method="get">
+    <button>Go to Log In</button>
+</form>
