changed weather, added YN instead of TF

--- a/views/reminder/edit.ejs
+++ b/views/reminder/edit.ejs
@@ -19,7 +19,7 @@
           <% } else { %>
             <input type="radio" name="completed" id="true" value="true">
           <% } %>
-          True
+          Yes
         </label>
       </div>
       <div class="radio">
@@ -29,7 +29,7 @@
           <% } else { %>
             <input type="radio" name="completed" id="false" value="false">
           <% } %>
-          False
+          No
         </label>
       </div>
     </div>
